modify board name

--- a/metadata/layout.conf
+++ b/metadata/layout.conf
@@ -1,6 +1,6 @@
 masters = portage-stable chromiumos eclass-overlay fyde-eclass amd64-fydeos
 profile-formats = portage-2 profile-default-eapi
 profile_eapi_when_unspecified = 5-progress
-repo-name = amd64-amdgpu
+repo-name = amd64-fydeos_apu
 thin-manifests = true
 use-manifests = strict
