OFYDE-41: move to overlay-amd64-openfyde_apu from overlay-amd64-amdgpu
Signed-off-by: jinqiang zhang <jinqiang@fydeos.io>

--- a/make.conf
+++ b/make.conf
@@ -1,6 +1,6 @@
-CHROMEOS_KERNEL_CONFIG="/mnt/host/source/src/overlays/overlay-amd64-amdgpu/kconfig/amdgpu_def-r96-5_10-def-r2"
+CHROMEOS_KERNEL_CONFIG="/mnt/host/source/src/overlays/overlay-amd64-openfyde_apu/kconfig/amdgpu_def-r96-5_10-def-r2"
 USE="${USE} -kernel-5_4 kernel-5_10 amd-common"
-USE="${USE} -arc_vulcan arc_amdsoc arc_uses_cros_video_decoder"
+# USE="${USE} -arc_vulcan arc_amdsoc arc_uses_cros_video_decoder"
 USE="${USE} drm_atomic libkms"
 USE="${USE} scheduler_configuration_performance"
 USE="${USE} houdini houdini64 libinput"
