--- a/metadata/layout.conf
+++ b/metadata/layout.conf
@@ -1,6 +1,6 @@
-masters = portage-stable chromiumos eclass-overlay fyde-eclass amd64-fydeos
+masters = portage-stable chromiumos eclass-overlay fyde-eclass amd64-openfyde
 profile-formats = portage-2 profile-default-eapi
 profile_eapi_when_unspecified = 5-progress
-repo-name = amd64-fydeos_apu
+repo-name = amd64-openfyde_apu
 thin-manifests = true
 use-manifests = strict
