--- a/make.conf
+++ b/make.conf
@@ -3,7 +3,7 @@ USE="${USE} -kernel-5_4 kernel-5_10 amd-common"
 # USE="${USE} -arc_vulcan arc_amdsoc arc_uses_cros_video_decoder"
 USE="${USE} drm_atomic libkms"
 USE="${USE} scheduler_configuration_performance"
-USE="${USE} houdini houdini64 libinput"
+USE="${USE} libinput"
 
 ACCEPT_LICENSE="*"
 LLVM_TARGETS="AMDGPU"
