update kernel to 5.15

--- a/make.conf
+++ b/make.conf
@@ -1,5 +1,5 @@
-CHROMEOS_KERNEL_CONFIG="/mnt/host/source/src/overlays/overlay-amd64-openfyde_apu/kconfig/amdgpu_def-r96-5_10-def-r2"
-USE="${USE} -kernel-5_4 kernel-5_10 amd-common"
+CHROMEOS_KERNEL_CONFIG="/mnt/host/source/src/overlays/overlay-amd64-openfyde_apu/kconfig/amdgpu_def-r102-5_15-def-r1"
+USE="${USE} -kernel-5_4 -kernel-5_10 kernel-5_15 amd-common"
 # USE="${USE} -arc_vulcan arc_amdsoc arc_uses_cros_video_decoder"
 USE="${USE} drm_atomic libkms"
 USE="${USE} scheduler_configuration_performance"
