OS-280 add AMD_PMC to kernel config to fix failure of amdgpu after resuming.

--- a/make.conf
+++ b/make.conf
@@ -1,9 +1,11 @@
-CHROMEOS_KERNEL_CONFIG="/mnt/host/source/src/overlays/overlay-amd64-openfyde_apu/kconfig/amdgpu_def-r102-5_15-def-r1"
+CHROMEOS_KERNEL_CONFIG="/mnt/host/source/src/overlays/overlay-amd64-openfyde_apu/kconfig/amdgpu_def-r114-5_15-def-r2"
 USE="${USE} -kernel-5_4 -kernel-5_10 kernel-5_15 amd-common"
 # USE="${USE} -arc_vulcan arc_amdsoc arc_uses_cros_video_decoder"
 USE="${USE} drm_atomic libkms"
 USE="${USE} scheduler_configuration_performance"
 USE="${USE} libinput"
+
+#USE="${USE} -kernel-5_15 kernel-6_1"
 
 ACCEPT_LICENSE="*"
 LLVM_TARGETS="AMDGPU"
