--- a/make.conf
+++ b/make.conf
@@ -1,5 +1,5 @@
 CHROMEOS_KERNEL_CONFIG="/mnt/host/source/src/overlays/overlay-amd64-openfyde_apu/kconfig/amdgpu_def-r114-5_15-def-r2"
-USE="${USE} -kernel-5_4 -kernel-5_10 kernel-5_15 amd-common"
+USE="${USE} -kernel-5_4 -kernel-5_10 kernel-5_15 amd-common vtpm_proxy -tpm_insecure_fallback"
 # USE="${USE} -arc_vulcan arc_amdsoc arc_uses_cros_video_decoder"
 USE="${USE} drm_atomic libkms"
 USE="${USE} scheduler_configuration_performance"
