adjusted the USE flag for changing parent board

--- a/make.conf
+++ b/make.conf
@@ -1,17 +1,8 @@
-CHROMEOS_KERNEL_CONFIG="/mnt/host/source/src/overlays/overlay-amd64-openfyde_apu/kconfig/amdgpu_def-r114-5_15-def-r2"
-USE="${USE} -kernel-5_4 -kernel-5_10 kernel-5_15 amd-common vtpm_proxy -tpm_insecure_fallback"
-# USE="${USE} -arc_vulcan arc_amdsoc arc_uses_cros_video_decoder"
-USE="${USE} drm_atomic libkms"
+CHROMEOS_KERNEL_CONFIG="/mnt/host/source/src/overlays/overlay-amd64-openfyde_apu/kconfig/amdgpu_def-r120-5_15-def-r1"
+
+USE="${USE} -kernel-5_4 -5_10 kernel-5_15"
+USE="${USE} drm_atomic libkms llvm"
+USE="${USE} amd-common"
 USE="${USE} scheduler_configuration_performance"
-USE="${USE} libinput"
 
-#USE="${USE} -kernel-5_15 kernel-6_1"
-
-ACCEPT_LICENSE="*"
-LLVM_TARGETS="AMDGPU"
 VIDEO_CARDS="radeon amdgpu radeonsi"
-ARC_BASE="/opt/android-p"
-ARC_VERSION_CODENAME="pi"
-ARC_LLVM_VERSION="6.0"
-ARC_VERSION_MAJOR="9"
-ARC_PLATFORM_SDK_VERSION="28"
