add flag for hevc codc

--- a/make.conf
+++ b/make.conf
@@ -1,8 +1,10 @@
 CHROMEOS_KERNEL_CONFIG="/mnt/host/source/src/overlays/overlay-amd64-openfyde_apu/kconfig/amdgpu_def-r120-5_15-def-r1"
 
+
+
 USE="${USE} -kernel-5_4 -5_10 kernel-5_15"
 USE="${USE} drm_atomic libkms llvm"
-USE="${USE} amd-common"
+USE="${USE} amd-common hevc_codec"
 USE="${USE} scheduler_configuration_performance"
 
 VIDEO_CARDS="radeon amdgpu radeonsi"
